kubernetes/apps/base/bhaiya/bhaiya/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bhaiya
  labels:
    app.kubernetes.io/name: bhaiya
