kubernetes/apps/base/bhaiya/bhaiya/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bhaiya
  namespace: bhaiya
  labels:
    app.kubernetes.io/name: bhaiya
spec:
  type: ClusterIP
  ports:
    - name: grpc-web
      port: 80
      targetPort: grpc-web
      protocol: TCP
  selector:
    app.kubernetes.io/name: bhaiya
